--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 mysql = "24.0.0"
 sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
+tokio = { version = "1.34.0", features = ["full"] }
