--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 mysql = "24.0.0"
 sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
 tokio = { version = "1.34.0", features = ["full"] }
